# crypto-rs

./: Cargo.toml  README.md
.github/workflows/: audit.yml  build.yml  rust-clippy.yml
benches/: bench.rs
src/: errors.rs  functions.rs  lib.rs  macros.rs  main.rs  traits.rs
src/ciphers/: aes128.rs  aes192.rs  aes256.rs  des64.rs
tests/: test.rs
