[package]
name = "crypto-rs"
version = "0.1.0"
authors = ["houseme <housemecn@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Common traits used by cryptographic algorithms. Users should generally use higher-level trait crates instead of this one."
homepage = "https://github.com/houseme/crypto-rs"
repository = "https://github.com/houseme/crypto-rs"
readme = "README.md"
keywords = ["crypto", "rustcrypto", "cryptographic", "signature", "hash"]
categories = ["cryptography", "algorithms", "development-tools"]
edition = "2021"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20"
digest = "0.10.5"
block-modes = "0.9.1"
des = "0.8.1"
aes = "0.8.1"
crc-any = "2.3"
md-5 = "0.10.5"
tiger = "0.2.1"
sha2 = "0.10.6"
cbc = "0.1.2"

[features]
default = ["std"]
std = []